option('USE_CAP', type : 'boolean', value : true,
	description : 'Capatiblity support (with libcap)')

option('USE_IDN', type : 'boolean', value : true,
	description : 'IDN support (with libidn2)')

option('BUILD_ARPING', type : 'boolean', value : true,
        description : 'Build arping')

option('BUILD_CLOCKDIFF', type : 'boolean', value : true,
        description : 'Build clockdiff')

option('BUILD_PING', type : 'boolean', value : true,
        description : 'Build ping')

option('BUILD_RARPD', type : 'boolean', value : false,
        description : 'Build rarpd')

option('BUILD_RDISC', type : 'boolean', value : true,
	description : 'Build RDISC')

option('ENABLE_RDISC_SERVER', type : 'boolean', value : true,
	description : 'Enable RDISC server code')

option('BUILD_TFTPD', type : 'boolean', value : false,
        description : 'Build tftpd')

option('BUILD_TRACEPATH', type : 'boolean', value : true,
        description : 'Build tracepath')

option('BUILD_TRACEROUTE6', type : 'boolean', value : false,
        description : 'Build traceroute6')

option('BUILD_NINFOD', type : 'boolean', value : true,
	description : 'Build ninfod')

option('NINFOD_MESSAGES', type : 'boolean', value : true,
	description : 'Enable ninfod syslog messages')

option('BUILD_MANS', type : 'boolean', value : true,
	description : 'Build manuals')

option('BUILD_HTML_MANS', type : 'boolean', value : false,
	description : 'Build html manuals')

option('NO_SETCAP_OR_SUID', type : 'boolean', value : false,
       description : 'Disable setting setcap or setuid with build-aux/setcap-setuid.sh')

option('SETCAP_OR_SUID_ARPING', type : 'boolean', value : false,
	description : 'Set setcap or setuid on arping with build-aux/setcap-setuid.sh')

option('SETCAP_OR_SUID_CLOCKDIFF', type : 'boolean', value : true,
	description : 'Set setcap or setuid on clockdiff with build-aux/setcap-setuid.sh')

option('SETCAP_OR_SUID_PING', type : 'boolean', value : true,
	description : 'Set setcap or setuid on ping with build-aux/setcap-setuid.sh')

option('SETCAP_OR_SUID_TRACEROUTE6', type : 'boolean', value : true,
	description : 'Set setcap or setuid on traceroute6 with build-aux/setcap-setuid.sh')

option('ARPING_DEFAULT_DEVICE', type : 'string', value : '',
	description : 'Default device for arping')

option('systemdunitdir', type: 'string', value: '',
	description: 'Directory for systemd units')

option('INSTALL_SYSTEMD_UNITS', type: 'boolean', value: false,
        description: 'Install generated systemd unit files')

option('USE_GETTEXT', type: 'boolean', value: true,
	description: 'Enable I18N')
